# pero

./: .gitignore  Cargo.toml  askama.toml  build.rs
.cargo/: config.toml
config/: default.toml
docs/superpowers/specs/: 2026-04-16-api-docs-design.md
examples/app/: README.md  config.py  main.py  pyproject.toml
examples/app/routers/: auth.py  user.py
examples/app/services/: oauth2.py
examples/app/static/: index.html
locales/: en.toml  zh-CN.toml
migrations/: 001_init.sql  002_token_families.sql
src/: app.rs  error.rs  lib.rs  log.rs  main.rs  state.rs
src/api/: docs.rs  health.rs  mod.rs  response.rs
src/application/: mod.rs  password_reset.rs  social_login.rs  sso_login.rs  token_exchange.rs  user_management.rs
src/auth/: abac.rs  jwt.rs  mod.rs
src/cache/: mod.rs  session.rs
src/config/: settings.rs
src/db/: mod.rs
src/docs/: mod.rs
src/domain/: mod.rs
src/domains/: mod.rs
src/extractors/: mod.rs  pagination.rs  validated_json.rs  validated_query.rs
src/handler/: mod.rs
src/infra/: cache.rs  janitor.rs  jwt.rs  logging.rs  mod.rs  sqlx_mappers.rs
src/middleware/: abac.rs  auth.rs  logging.rs  mod.rs
src/routes/: auth.rs  health.rs  mod.rs  policies.rs  user_attrs.rs  users.rs
src/shared/: abac.rs  cache_keys.rs  constants.rs  crypto.rs  csrf.rs  error.rs  i18n.rs  jwt.rs  kv.rs  message.rs  mod.rs  page.rs  pagination.rs  patch.rs  response.rs  state.rs  utils.rs  validation.rs
static/css/: app.css
static/js/: app.js  i18n.js
templates/account/: authorizations.html  change_password.html  profile.html  sessions.html
templates/layouts/: account.html  auth.html
templates/sso/: authorization.html  change_password.html  consent.html  error.html  forgot.html  forgot_password.html  layout.html  login.html  register.html  reset_password.html  verification.html
tests/: abac_tests.rs  client_policy_tests.rs  core_contract_tests.rs  evaluate_tests.rs  health_tests.rs  identity_tests.rs  oauth2_tests.rs  oidc_tests.rs  sso_tests.rs
tests/abac/: main.rs
tests/api/: main.rs
tests/application/: main.rs
tests/architecture/: main.rs
tests/common/: app.rs  cleanup.rs  client.rs  fixtures.rs  isolation.rs  mod.rs
tests/domain/: main.rs
tests/i18n/: main.rs
tests/identity/: main.rs
tests/oauth2/: main.rs
tests/oidc/: main.rs
tests/real_backend/: main.rs
tests/sso/: main.rs
ui/locales/: en.toml  zh-CN.toml
(+296 files in other folders)
