[package]
name = "pero"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "sensitive-headers", "limit", "normalize-path", "catch-panic", "propagate-header", "util", "uuid"] }
tower = "0.5"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Redis
redis = { version = "1.2", features = ["aio", "tokio-comp", "connection-manager", "tokio-rustls-comp"] }
rustls = { version = "0.23", features = ["ring", "std", "tls12"] }

# Auth
jsonwebtoken = "10"
bcrypt = "0.19"
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.15"
toml = "1"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# RSA / JWT
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
sha2 = "0.10"

# Regex (for ABAC pattern matching)
regex = "1"

# URL
url = "2"
urlencoding = "2"
